# libqrencode-android

./: .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle  keystore.jks
app/release/: app.aab
app/src/androidTest/java/com/ben/android/libqrencode_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ben/android/libqrencode_android/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ben/android/libqrencode_android/: ExampleUnitTest.java
cmake/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
